adicionando media querry para mobile

--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
             </form>
         </div>
     </header>
-
     <div class="container conteudo">
         <main>
             <section class="sobre-a-loja">
-                <article>
                     <img src="./img/sobre-a-loja.jpeg" alt="Loja da LH perifericos">
-                    <h2>Sobre a loja</h2>
-                    <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, magnam soluta? Velit aliquam repellat ex similique provident magni nam quia molestias excepturi fuga veniam, facere dolorem dicta eveniet repellendus asperiores?</h3>
-                </article>
+                    <div>
+                        <h2>Sobre a loja</h2>
+                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, veritatis atque iusto tempore reprehenderit at! Tempore quibusdam quod nemo fugit culpa, eius minus in. Repudiandae saepe quam quaerat expedita ex?</h3>    
+                    </div>
             </section>
         </main>
             <aside>
@@ -43,19 +42,19 @@
                     <article>
                         <img src="./img/produto-2.jpeg" alt="">
                         <h3>Headset Gamer Hyper-X</h3>
-                        <p>Headset Gamer Hyper-X, microfone com cancelamento de ruído e audio surround 7.1</p>
+                        <p>Microfone com cancelamento de ruído e audio surround 7.1</p>
                         <button type="button">Adicionar ao carrinho</button>
                     </article>
                     <article>
                         <img src="./img/produto-3.jpeg" alt="">
-                        <h3></h3>
-                        <p>Webcam GoTech com qualidade full hd</p>
+                        <h3>Mouse Gamer Hyper-X</h3>
+                        <p>Modelo full black com 20.000 DPI</p>
                         <button type="button">Adicionar ao carrinho</button>
                     </article>
                     <article>
                         <img src="./img/produto-4.jpeg" alt="">
-                        <h3>Webcam full hd</h3>
-                        <p>Webcam GoTech com qualidade full hd</p>
+                        <h3>Gabinete Gamer</h3>
+                        <p>Gabinete com altura de: 40cm, largura de: 40cm, comprimento de: 40cm</p>
                         <button type="button">Adicionar ao carrinho</button>
                     </article>
                 </section>
