--- a/index.html
+++ b/index.html
@@ -35,26 +35,34 @@
                 <section class="produtos">
                 <article>
                         <img src="./img/produto-1.jpeg" alt="">
-                        <h3>Webcam GoTech</h3>
-                        <p>Webcam GoTech com qualidade full hd</p>
+                        <div class="nome-produto">
+                            <h3>Webcam GoTech</h3>
+                            <p>Webcam GoTech com qualidade full hd</p>
+                        </div>
                         <button type="button">Adicionar ao carrinho</button>
                     </article>
                     <article>
                         <img src="./img/produto-2.jpeg" alt="">
-                        <h3>Headset Gamer Hyper-X</h3>
-                        <p>Microfone com cancelamento de ruído e audio surround 7.1</p>
+                        <div class="nome-produto">
+                            <h3>Headset Gamer Hyper-X</h3>
+                            <p>Microfone com cancelamento de ruído e audio surround 7.1</p>
+                        </div>
                         <button type="button">Adicionar ao carrinho</button>
                     </article>
                     <article>
                         <img src="./img/produto-3.jpeg" alt="">
-                        <h3>Mouse Gamer Hyper-X</h3>
-                        <p>Modelo full black com 20.000 DPI</p>
+                        <div class="nome-produto">
+                            <h3>Mouse Gamer Hyper-X</h3>
+                            <p>Modelo full black com 20.000 DPI</p>
+                        </div>
                         <button type="button">Adicionar ao carrinho</button>
                     </article>
                     <article>
                         <img src="./img/produto-4.jpeg" alt="">
-                        <h3>Gabinete Gamer</h3>
-                        <p>Gabinete com altura de: 40cm, largura de: 40cm, comprimento de: 40cm</p>
+                        <div class="nome-produto">
+                            <h3>Gabinete Gamer</h3>
+                            <p>Gabinete com altura de: 40cm, largura de: 40cm, comprimento de: 40cm</p>
+                        </div>
                         <button type="button">Adicionar ao carrinho</button>
                     </article>
                 </section>
