--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             </form>
         </div>
     </header>
+    <div id="carousel-imagens">
+        <img src="./img/carrossel-1.jpeg" alt="#">
+        <img src="./img/carrossel-2.jpeg" alt="#">
+        <img src="./img/carrossel-3.jpeg" alt="#">
+    </div>
     <div class="container conteudo">
         <main>
             <section class="sobre-a-loja">
@@ -74,6 +79,8 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/jquery.mask.min.js"></script>
     <script src="./js/jquery.validate.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="./js/messages_pt_BR.min.js"></script>
+    
+    <script src="./js/main.js"></script>
 </body>
 </html>
